[gd_scene load_steps=4 format=3 uid="uid://chw0ule4oqi8w"]

[ext_resource type="Script" path="res://Tile.gd" id="1_e21av"]
[ext_resource type="Texture2D" uid="uid://pbt7ubobqrt4" path="res://tiles.png" id="2_78p8u"]
[ext_resource type="Texture2D" uid="uid://raaphl6g0rah" path="res://tiles_numbered.png" id="3_6ms6c"]

[node name="Tile" type="Node2D"]
script = ExtResource("1_e21av")

[node name="HexA" type="Sprite2D" parent="."]
texture = ExtResource("2_78p8u")
region_enabled = true
region_rect = Rect2(0, 0, 200, 200)

[node name="NumA" type="Sprite2D" parent="HexA"]
texture = ExtResource("3_6ms6c")
region_enabled = true
region_rect = Rect2(0, 0, 200, 200)

[node name="AreaA" type="Area2D" parent="HexA"]

[node name="CollisionA" type="CollisionPolygon2D" parent="HexA/AreaA"]
polygon = PackedVector2Array(-85, -46, -85, 52, 0, 100, 83, 50, 83, -53, -1, -97)

[node name="HexB" type="Sprite2D" parent="."]
position = Vector2(165, 0)
texture = ExtResource("2_78p8u")
region_enabled = true
region_rect = Rect2(0, 0, 200, 200)

[node name="NumB" type="Sprite2D" parent="HexB"]
texture = ExtResource("3_6ms6c")
region_enabled = true
region_rect = Rect2(0, 0, 200, 200)

[node name="AreaB" type="Area2D" parent="HexB"]

[node name="CollisionB" type="CollisionPolygon2D" parent="HexB/AreaB"]
polygon = PackedVector2Array(-85, -46, -85, 52, 0, 100, 83, 50, 83, -53, -1, -97)

[connection signal="mouse_entered" from="HexA/AreaA" to="." method="_on_area_a_mouse_entered"]
[connection signal="mouse_exited" from="HexA/AreaA" to="." method="_on_area_a_mouse_exited"]
[connection signal="mouse_entered" from="HexB/AreaB" to="." method="_on_area_b_mouse_entered"]
[connection signal="mouse_exited" from="HexB/AreaB" to="." method="_on_area_b_mouse_exited"]
